Implementation of Generics example