@@ -1,11 +1,12 @@
 package generics.lowerbound;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class LowerBounds {
     public static void main(String[] args) {
-        List<String> strings = Stream.of("a", "few", "strings").toList();
+        List<String> strings = Stream.of("a", "few", "strings").collect(Collectors.toList());
 
         strings.forEach((String s) -> System.out.printf("%s in all caps is %s%n", s, s.toUpperCase()));
         strings.forEach((Object o) -> System.out.printf("%s object hashcode is %d%n", o, o.hashCode()));
